<resources>
    <string name="app_name">NoteManagementSystem</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_category">Category</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_note">Note</string>
    <string name="group_account">Account</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_change_password">Change password</string>

    <string name="login_label">Note Management System</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="check_remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>

    <string name="sign_up_label">Sign Up Form</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>

    <string name="edit_profile_label">Edit Profile</string>
    <string name="change">Change</string>
    <string name="hint_enter_first_name">Enter your first name</string>
    <string name="hint_enter_last_name">Enter your last name</string>

    <string name="change_password_label">Change your password</string>
    <string name="hint_enter_current_password">Enter current password</string>
    <string name="hint_enter_new_password">Enter new password</string>
    <string name="hint_enter_password_again">Enter password again</string>

    <string name="dialog_category_label">Category Form</string>
    <string name="add">Add</string>
    <string name="close">Close</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="edit_category">Edit category</string>
    <string name="hint_category_name">Enter category name</string>
    <string name="save">Save</string>
    <string name="cancle">Cancle</string>


</resources>

